// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConstDeclaration simple const 1`] = `
"// fakeid
declare const NSPasteboardTypeString: cocoascript.NSPasteboardType;
"
`;

exports[`ConstDeclaration type before const 1`] = `
"// fakeid
declare const NSWorkspaceVolumeURLKey: cocoascript.NSString;
"
`;
